--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,6 @@
 [project]
 name = "zikos"
+version = "0.1.0"
 description = "AI Music Teacher POC"
 requires-python = ">=3.11"
 dependencies = [
@@ -20,8 +21,9 @@ dependencies = [
 ]
 
 
-[tool.setuptools_scm]
-write_to = "zikos/_version.py"
+# [tool.setuptools_scm]
+# write_to = "src/zikos/_version.py"
+# Using static version for now - can enable setuptools_scm later if needed
 
 
 [project.optional-dependencies]
