--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,41 @@ on:
     branches: [main, develop]
 
 jobs:
-  test:
+  # Lightweight checks for push events (excludes heavy ML libraries)
+  quick-checks:
+    name: Quick Checks
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+    
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install lightweight dependencies
+        run: |
+          python -m pip install --upgrade pip
+          # Install lightweight extras (includes all base deps except heavy ML libs)
+          pip install -e ".[lightweight]"
+
+      - name: Run linters
+        run: ruff check src tests
+
+      - name: Check formatting
+        run: black --check src tests
+
+      - name: Run tests (excluding LLM-dependent tests)
+        run: |
+          pytest -v --no-cov -k "not llm and not LLM"
+
+  # Full test suite for PRs (includes all dependencies and coverage)
+  full-tests:
+    name: Full Tests
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
     strategy:
       matrix:
         python-version: ["3.11", "3.12"]
@@ -24,7 +57,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e ".[dev]"
+          pip install -e ".[dev,ml]"
 
       - name: Run linters
         run: make lint
@@ -35,7 +68,7 @@ jobs:
       - name: Type check
         run: make type-check
 
-      - name: Run tests
+      - name: Run tests with coverage
         run: make test-cov
 
       - name: Upload coverage
@@ -43,4 +76,3 @@ jobs:
         with:
           file: ./coverage.xml
           fail_ci_if_error: false
-
