--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,3 +30,18 @@ repos:
         additional_dependencies: [types-all]
         args: [--ignore-missing-imports]
 
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v4.0.0-alpha.8
+    hooks:
+      - id: prettier
+        files: ^static/.*\.(js|html|css)$
+
+  - repo: local
+    hooks:
+      - id: eslint
+        name: eslint
+        entry: bash -c 'if command -v npm >/dev/null 2>&1 && [ -f package.json ]; then npm run lint; else exit 0; fi'
+        language: system
+        files: ^static/.*\.js$
+        pass_filenames: false
+
