--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,6 +128,8 @@ warn_unused_ignores = true
 warn_no_return = true
 strict_equality = true
 show_error_codes = true
+explicit_package_bases = true
+ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
 module = [
