--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,22 +3,21 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": "./tsconfig.json"
   },
+  "plugins": ["@typescript-eslint"],
   "rules": {
-    "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
+    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
     "no-console": "off",
-    "no-undef": "warn"
-  },
-  "globals": {
-    "navigator": "readonly",
-    "MediaRecorder": "readonly",
-    "WebSocket": "readonly",
-    "URL": "readonly",
-    "Blob": "readonly"
+    "@typescript-eslint/no-explicit-any": "warn"
   }
 }
 
