--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "AI Music Teacher POC",
   "private": true,
   "scripts": {
-    "lint": "eslint 'static/**/*.js' || true",
-    "lint:fix": "eslint --fix 'static/**/*.js' || true",
-    "format": "prettier --write 'static/**/*.{js,html,css}'",
-    "format:check": "prettier --check 'static/**/*.{js,html,css}'"
+    "build": "tsc",
+    "build:watch": "tsc --watch",
+    "lint": "eslint 'static/src/**/*.ts' || true",
+    "lint:fix": "eslint --fix 'static/src/**/*.ts' || true",
+    "format": "prettier --write 'static/**/*.{ts,html,css}'",
+    "format:check": "prettier --check 'static/**/*.{ts,html,css}'",
+    "type-check": "tsc --noEmit"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.57.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "typescript": "^5.3.3"
   }
 }
 
