--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "lint:fix": "eslint --fix 'static/src/**/*.ts' || true",
     "format": "prettier --write 'static/**/*.{ts,html,css}'",
     "format:check": "prettier --check 'static/**/*.{ts,html,css}'",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "@vitest/ui": "^2.1.8",
     "eslint": "^8.57.0",
+    "jsdom": "^25.0.1",
     "prettier": "^3.2.5",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^2.1.8"
   }
 }
-
