--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,61 +7,12 @@ on:
     branches: [main, develop]
 
 jobs:
-  # Lightweight checks for push events (excludes heavy ML libraries)
-  quick-checks:
-    name: Quick Checks
+  test:
+    name: Test (Python ${{ matrix.python-version }})
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
-    
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install lightweight dependencies
-        run: |
-          python -m pip install --upgrade pip
-          # Install lightweight extras (includes all base deps except heavy ML libs)
-          pip install -e ".[lightweight]"
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-
-      - name: Install JavaScript dependencies
-        run: |
-          if [ -f package.json ]; then npm install; fi
-
-      - name: Build TypeScript
-        run: |
-          if [ -f package.json ]; then npm run build; fi
-
-      - name: Run linters
-        run: make lint
-
-      - name: Check formatting
-        run: make format-check
-
-      - name: Type check TypeScript
-        run: |
-          if [ -f package.json ]; then npm run type-check; fi
-
-      - name: Run tests (unit tests only, excluding LLM-dependent tests)
-        run: |
-          pytest -v --no-cov -k "not llm and not LLM" tests/unit/
-
-  # Full test suite for PRs (includes all dependencies and coverage)
-  full-tests:
-    name: Full Tests
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
     strategy:
       matrix:
-        python-version: ["3.11", "3.12"]
+        python-version: ["3.11", "3.12", "3.13"]
 
     steps:
       - uses: actions/checkout@v4
@@ -71,39 +22,87 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libsndfile1 libsndfile1-dev
+
+      - name: Cache pip packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt', '**/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e ".[dev]"
+
+      - name: Run linters
+        run: |
+          ruff check src tests
+          black --check src tests
+          mypy src
+
+      - name: Run unit tests
+        run: |
+          pytest tests/unit/ -v --cov=src/zikos --cov-report=term-missing --cov-report=xml
+
+      - name: Run integration tests
+        run: |
+          pytest tests/integration/ -v --no-cov -m "not expensive and not llama"
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        if: matrix.python-version == '3.13'
+        with:
+          file: ./coverage.xml
+          flags: unittests
+          name: codecov-umbrella
+
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e ".[dev]"
+
+      - name: Run ruff
+        run: ruff check src tests
+
+      - name: Run black check
+        run: black --check src tests
+
+      - name: Run mypy
+        run: mypy src
+
+  type-check-js:
+    name: TypeScript Type Check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -e ".[dev,ml]"
-          if [ -f package.json ]; then npm install; fi
+      - name: Install npm dependencies
+        run: npm ci
 
-      - name: Build TypeScript
-        run: |
-          if [ -f package.json ]; then npm run build; fi
+      - name: Run TypeScript type check
+        run: npm run type-check
 
-      - name: Run linters
-        run: make lint
-
-      - name: Check formatting
-        run: make format-check
-
-      - name: Type check Python
-        run: make type-check
-
-      - name: Type check TypeScript
-        run: |
-          if [ -f package.json ]; then npm run type-check; fi
-
-      - name: Run tests with coverage
-        run: make test-cov
-
-      - name: Upload coverage
-        uses: codecov/codecov-action@v3
-        with:
-          file: ./coverage.xml
-          fail_ci_if_error: false
+      - name: Run ESLint
+        run: npm run lint
