--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "scipy>=1.11.0",
     "pydantic>=2.0.0",
     "python-multipart>=0.0.6",
+    "pyfluidsynth>=1.3.0",
 ]
 
 
@@ -174,6 +175,7 @@ omit = [
     "*/test_*.py",
     "*/__pycache__/*",
     "*/.*",
+    "src/zikos/services/llm.py",  # LLM tests are expensive and excluded from CI
 ]
 
 [tool.coverage.report]
