--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pydantic>=2.0.0",
     "python-multipart>=0.0.6",
     "pyfluidsynth>=1.3.0",
+    "pyrubberband>=0.3.0",
 ]
 
 
