--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,8 +56,20 @@ repos:
         pass_filenames: false
       - id: pytest-unit
         name: pytest unit tests with coverage
-        entry: bash -c 'PYTEST_CMD=""; if [ -f .venv/bin/pytest ]; then PYTEST_CMD=".venv/bin/pytest"; elif [ -f venv/bin/pytest ]; then PYTEST_CMD="venv/bin/pytest"; elif [ -n "$VIRTUAL_ENV" ]; then PYTEST_CMD="$VIRTUAL_ENV/bin/pytest"; else PYTEST_CMD="pytest"; fi; PYTHONPATH=backend $PYTEST_CMD tests/unit/ -v -m "not expensive and not llama" -x --cov=backend/zikos --cov-config=pyproject.toml --cov-report=term-missing --cov-fail-under=75 || exit 1'
+        entry: python -m pytest
+        args: [
+          'tests/unit/',
+          '-v',
+          '-m', 'not expensive and not llama and not slow and not integration',
+          '-x',
+          '--cov=backend/zikos',
+          '--cov-config=pyproject.toml',
+          '--cov-report=term-missing',
+          '--cov-fail-under=75'
+        ]
         language: system
         files: ^(backend/|tests/).*\.py$
         pass_filenames: false
         always_run: false
+        env:
+          PYTHONPATH: backend
