--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,9 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["vitest/globals"]
   },
   "include": ["frontend/src/**/*"],
-  "exclude": ["node_modules", "frontend/dist/**/*.js"]
+  "exclude": ["node_modules", "frontend/dist/**/*.js", "tests/**/*"]
 }
