--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libsndfile1 libsndfile1-dev rubberband-cli
+          sudo apt-get install -y libsndfile1 libsndfile1-dev rubberband-cli ffmpeg
 
       - name: Cache pip packages
         uses: actions/cache@v4
