--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "lint": "eslint 'frontend/src/**/*.ts' || true",
-    "lint:fix": "eslint --fix 'frontend/src/**/*.ts' || true",
+    "lint": "eslint frontend/src/**/*.ts || true",
+    "lint:fix": "eslint --fix frontend/src/**/*.ts || true",
     "format": "prettier --write 'frontend/**/*.{ts,html,css}'",
     "format:check": "prettier --check 'frontend/**/*.{ts,html,css}'",
     "type-check": "tsc --noEmit",
