--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "python-multipart>=0.0.6",
     "pyfluidsynth>=1.3.0",
     "pyrubberband>=0.3.0",
+    "tiktoken>=0.5.0",
 ]
 
 
