--- a/pyproject.toml
+++ b/pyproject.toml
@@ -174,7 +174,7 @@ addopts = [
     "--cov-report=term-missing",
     "--cov-report=html",
     "--cov-report=xml",
-    "--cov-fail-under=80",
+    "--cov-fail-under=75",
     "-v",
     "-m", "not comprehensive and not integration",
 ]
@@ -205,14 +205,12 @@ omit = [
     "*/__pycache__/*",
     "*/.*",
     "backend/zikos/services/llm.py",  # LLM tests are comprehensive and excluded from CI
-    # Audio analysis modules only tested by comprehensive tests (excluded from pre-commit for speed)
-    "backend/zikos/mcp/tools/analysis/audio/articulation.py",
-    "backend/zikos/mcp/tools/analysis/audio/chords.py",
-    "backend/zikos/mcp/tools/analysis/audio/comprehensive.py",
-    "backend/zikos/mcp/tools/analysis/audio/dynamics.py",
-    "backend/zikos/mcp/tools/analysis/audio/groove.py",
-    "backend/zikos/mcp/tools/analysis/audio/key.py",
-    "backend/zikos/mcp/tools/analysis/audio/timbre.py",
+    # LLM backends only tested in comprehensive tests (require real models and good hardware)
+    "backend/zikos/services/llm_backends/transformers.py",
+    "backend/zikos/services/llm_backends/llama_cpp.py",
+    "backend/zikos/services/llm_backends/__init__.py",
+    # GPU utils are environment-specific and hard to test in CI
+    "backend/zikos/utils/gpu.py",
 ]
 
 [tool.coverage.report]
