--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,25 +38,25 @@ repos:
     hooks:
       - id: eslint
         name: eslint
-        entry: bash -c 'if command -v npm >/dev/null 2>&1 && [ -f package.json ]; then npm run lint; else exit 0; fi'
+        entry: npm run lint'
         language: system
         files: ^frontend/src/.*\.ts$
         pass_filenames: false
       - id: typescript-build
         name: typescript build
-        entry: bash -c 'if command -v npm >/dev/null 2>&1 && [ -f package.json ]; then npm run build; else exit 0; fi'
+        entry: npm run build'
         language: system
         files: ^frontend/src/.*\.ts$
         pass_filenames: false
       - id: typescript-test
         name: typescript test
-        entry: bash -c 'if command -v npm >/dev/null 2>&1 && [ -f package.json ] && find tests/frontend -name "*.test.ts" -o -name "*.spec.ts" | grep -q .; then npm run test; else exit 0; fi'
+        entry: npm run test'
         language: system
         files: ^(frontend/src/|tests/frontend/).*\.ts$
         pass_filenames: false
       - id: pytest-unit
         name: pytest unit tests with coverage
-        entry: bash -c 'if [ -f venv/Scripts/python.exe ]; then venv/Scripts/python.exe -m pytest "$@"; elif [ -f venv/bin/python ]; then venv/bin/python -m pytest "$@"; else python -m pytest "$@"; fi'
+        entry: python -m pytest "$@"'
         args: [
           'tests/unit/',
           '-v',
