Lots of cleaning

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,6 @@
 # Zikos - AI Music Teacher Configuration
 # Copy this file to .env and adjust values for your setup
 
-# ============================================================================
-# LLM Configuration
-# ============================================================================
 
 # Path to LLM model file (required)
 # For GGUF models (llama-cpp-python):
@@ -12,23 +9,6 @@
 # LLM_MODEL_PATH=./models/Qwen_Qwen3-32B-Instruct
 LLM_MODEL_PATH=
 
-# LLM backend: auto, llama_cpp, or transformers
-# auto will detect based on model file extension
-LLM_BACKEND=auto
-
-# Context window size (tokens)
-# Recommended: 32768 for 8GB VRAM, 65536 for 16-24GB, 131072 for 40GB+
-LLM_N_CTX=131072
-
-# Number of GPU layers (-1=auto, 0=CPU only)
-# Use 0 for CPU-only, -1 for automatic detection
-LLM_N_GPU_LAYERS=-1
-
-# Sampling temperature (0.0-1.0, higher = more creative)
-LLM_TEMPERATURE=0.7
-
-# Top-p sampling (0.0-1.0, nucleus sampling)
-LLM_TOP_P=0.9
 
 # ============================================================================
 # API Configuration
@@ -80,3 +60,28 @@ MUSIC_FLAMINGO_SERVICE_URL=
 
 # Enable verbose tool calling logs
 DEBUG_TOOL_CALLS=false
+
+# ============================================================================
+# LLM Configuration
+# ============================================================================
+# NOTE: These variables override default constants. Don't edit those unless
+# you know what you're doing
+
+
+# LLM backend: auto, llama_cpp, or transformers
+# auto will detect based on model file extension
+# LLM_BACKEND=auto
+
+# Context window size (tokens)
+# Recommended: 32768 for 8GB VRAM, 65536 for 16-24GB, 131072 for 40GB+
+# LLM_N_CTX=32768
+
+# Number of GPU layers (-1=auto, 0=CPU only)
+# Use 0 for CPU-only, -1 for automatic detection
+#LLM_N_GPU_LAYERS=-1
+
+# Sampling temperature (0.0-1.0, higher = more creative)
+#LLM_TEMPERATURE=0.7
+
+# Top-p sampling (0.0-1.0, nucleus sampling)
+# LLM_TOP_P=0.9
