--- a/requirements.txt
+++ b/requirements.txt
@@ -273,3 +273,4 @@ websockets==15.0.1
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
+huggingface_hub
