--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "pyfluidsynth>=1.3.0",
     "pyrubberband>=0.3.0",
     "tiktoken>=0.5.0",
+    "huggingface_hub>=0.20.0",
+    "requests>=2.31.0",  # Fallback for model downloads
 ]
 
 
@@ -46,23 +48,6 @@ dev = [
     "mypy>=1.5.0",
     "pre-commit>=3.5.0",
     "pip-tools>=7.3.0",
-]
-# Model download helpers (optional, for downloading models)
-model-download = [
-    "huggingface-hub>=0.20.0",  # Recommended for model downloads
-    "requests>=2.31.0",  # Fallback for model downloads
-]
-
-# Lightweight dependencies for CI (base deps + dev tools, excludes heavy ML libraries)
-lightweight = [
-    "httpx>=0.24.0",  # Required for FastAPI TestClient
-    "pytest>=7.4.0",
-    "pytest-asyncio>=0.21.0",
-    "pytest-cov>=4.1.0",
-    "pytest-mock>=3.12.0",
-    "black>=23.0.0",
-    "ruff>=0.1.0",
-    "mypy>=1.5.0",
 ]
 
 [build-system]
