--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ dependencies = [
     "tiktoken>=0.5.0",
     "huggingface_hub>=0.20.0",
     "requests>=2.31.0",  # Fallback for model downloads
+    "llama-cpp-python>=0.2.0",
+    "torch>=2.0.0",
+    "torchaudio>=2.0.0",
+    "transformers>=4.35.0"
 ]
 
 
@@ -28,13 +32,6 @@ dependencies = [
 
 
 [project.optional-dependencies]
-# Heavy ML libraries (excluded from lightweight installs)
-ml = [
-    "torch>=2.0.0",
-    "torchaudio>=2.0.0",
-    "transformers>=4.35.0",
-    "llama-cpp-python>=0.2.0",
-]
 # Development tools
 dev = [
     "pytest>=7.4.0",
