--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - API_HOST=0.0.0.0
       - API_PORT=8000
       - API_RELOAD=false
-      - LLM_MODEL_PATH=/app/models/${LLM_MODEL_FILE:-tinyllama-1.1b-chat-v1.0.Q4_K_M.gguf}
+      - LLM_MODEL_PATH=/app/models/${LLM_MODEL_FILE:-Phi-3-mini-4k-instruct-q4.gguf}
       - LLM_N_CTX=32768
       - LLM_N_GPU_LAYERS=0
       - LLM_TEMPERATURE=0.7
