Fix CI test failures and coverage configuration
- Fix test_midi_to_audio_default_instrument to test success path
- Fix SystemTools.call_tool parameter naming collision (tool_name -> name)
- Add comprehensive tests for SystemTools
- Fix coverage omit config by adding --cov-config=pyproject.toml
- Add context_length.py to coverage omit (requires model loading)
- Add .claude to gitignore

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -153,6 +153,7 @@ addopts = [
     "--strict-markers",
     "--strict-config",
     "--cov=backend/zikos",
+    "--cov-config=pyproject.toml",
     "--cov-report=term-missing",
     "--cov-report=html",
     "--cov-report=xml",
@@ -193,6 +194,8 @@ omit = [
     "backend/zikos/services/llm_backends/__init__.py",
     # GPU utils are environment-specific and hard to test in CI
     "backend/zikos/utils/gpu.py",
+    # Context length utils require model loading, excluded from CI
+    "backend/zikos/utils/context_length.py",
 ]
 
 [tool.coverage.report]
